Restructure file structure pending rewrite.
- Python is increasingly showing it's detriment in the speed department.
- I'll continue development of the network, but durign training sessions I plan to rewrite
either substantial parts of the code in Cython or, as an even bigger experiment, Nim.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-results/
-__pycache__/
-tests/__pycache__/
-logs/
+# I/O files for Chrysaora
+chrysaora_py/results/
+chrysaora_py/__pycache__/
+chrysaora_py/tests/__pycache__/
+chrysaora_py/logs/
+
+# Training data for the network
+chrysaora_py/split
+chrysaora_py/network
